# glashatay

./: Cargo.toml  LICENSE  README.md  TODO.md  build.rs  response.json
config/: config.toml
docs/: Setup dialog (v1).drawio
files/: config.json
migrations/2024-03-27-080037_create_channels_tables/: up.sql
migrations/2024-04-01-203010_change_anchor/: down.sql  up.sql
src/: bot.rs  config.rs  config_validators.rs  domain.rs  main.rs  utils.rs  vk_api.rs  vk_poll.rs
src/bot/: data.rs  dialogue.rs  mod.rs  utils.rs
src/db/: mod.rs  models.rs  schema.rs
src/utils/: print_error_chain.rs
src/vk_api/: attachment.rs  client.rs  mod.rs  posts.rs  response.rs
src/vk_poller/: converter.rs  mod.rs  poller.rs
