[package]
name = "glashatay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
argh = "0.1.12"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.5", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
simple_logger = "4.3.3"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.12"
url = "2.5.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
