[package]
name = "glashatay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.5", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
garde = { version = "0.18.0", features = ["derive"] }
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
simple_logger = "4.3.3"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
toml = "0.8.12"
url = "2.5.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
